# muxide

./: .gitignore  Cargo.toml  TODO_LIST
.github/workflows/: rust.yml
example_configs/: config.toml
example_scripts/: launch.mux
muxide_logger/: Cargo.toml
muxide_logger/src/: format.rs  lib.rs  log.rs  logger.rs  macros.rs
muxide_logger/src/formatter/: builder.rs  formatter.rs  mod.rs
muxide_logger/tests/: file_test.rs  test_macros.rs
muxide_logging/src/: format.rs  lib.rs  log.rs  logger.rs  macros.rs
muxide_logging/tests/: file_test.rs  string_test.rs  threaded_file_test.rs
src/: channel_controller.rs  color.rs  command.rs  config.rs  display.rs  error.rs  geometry.rs  hasher.rs  input_manager.rs  lib.rs  logic_manager.rs  main.rs  pty.rs  pty_controller.rs  sender_id.rs  terminal_screen.rs  vte_handler.rs
src/command_processor/: environment.rs  generic_tokenizer.rs  lexer.rs  literal.rs  mod.rs  processor.rs  token.rs
src/config/: border_color.rs  borders.rs  color.rs  config.rs  environment.rs  keys.rs  mod.rs  password_settings.rs  serde_default_funcs.rs
src/display/: display.rs  layout.rs  mod.rs  panel.rs  subdivision.rs  workspace.rs
src/logic_manager/: manager.rs  mod.rs  panel.rs  pty_manager.rs
src/pty/: mod.rs  old.rs
vt100-rust/: Cargo.toml
vt100-rust/examples/: generate_fixture.rs
vt100-rust/src/: attrs.rs  screen.rs
