[package]
name = "muxide"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# Until an update is added we can't use the crates.io version  vt100 = "0.8.1"
vt100 = { path = "vt100-rust" }
crossterm = "0.19"
termion = "1.5"
num-traits = "0.2"
nix = "0.20"
libc = "0.2"
chan-signal = "0.3"
tokio = { version = "1.1", features = ["full"] }
futures = { version = "0.3", features = ["bilock", "io-compat", "unstable"]}
paste = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = "2.33"
dirs = "3.0"
terminfo = "0.7"
lazy_static = "1.4"
muxide_logging = { git = "https://github.com/aidos9/muxide_logging", branch = "main" }